feature: email verification using otp